[tool.poetry]
name = "blog-app"
version = "0.1.0"
description = ""
authors = ["coder-sabarish <studysabarish@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
